# NexusMiner

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DATA_PACKET_SUMMARY.md  Dockerfile  ENHANCED_DIAGNOSTICS_SUMMARY.md  ENHANCEMENT_SUMMARY.md  FALCON_AUTH_REPAIR_SUMMARY.md  FALCON_WRAPPER_IMPLEMENTATION.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_VERIFICATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_dynamic_port_detection.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_PHASE2_ENHANCEMENTS.md  MODERNIZATION_SUMMARY.md  PHASE2_INTEGRATION.md  PR_FINAL_SUMMARY.md  PR_SUMMARY.md  README.md  REQUIREMENTS_COMPLIANCE.md  SECURITY_SUMMARY.md  TESTING_VERIFICATION.md  UNIFIED_SOLUTION_SUMMARY.md  docker-compose.yml  falconminer.conf  miner.conf  prime-pool-auto.conf  prime-pool.conf  prime-solo-auto.conf  prime-solo.conf  test_packet_encoding.cpp  verify_phase2.sh
_codeql_build_dir/: CMakeCache.txt  NexusMiner  cmake_install.cmake  version.h
docs/: LLP_OPCODE_VERIFICATION.md  PR_SUMMARY_dynamic_port_detection.md  TROUBLESHOOTING.md  cross_validation_recovery.md  data_packet.md  dynamic_port_detection.md  enhanced_diagnostics.md  falcon_authentication.md  lll-tao_data_packet_integration.md  mining-llp-protocol.md  mining_template_read_feed_system.md  simplified_config_files.md  unified_falcon_signature_protocol.md  upgrade_notes.md
example_configs/: advanced_hash_multi_gpu.config  advanced_hash_solo_multiple_gpus.conf  advanced_prime_multicore_cpu.config  (+9 more)
src/LLC/: CMakeLists.txt
src/LLC/src/LLC/: flkey.cpp
(+71 files in other folders)
